# unicodes

./: .gitignore  .pypyreadme  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.mm  setup.cfg  setup.py
docs/: classIndex.html  index.html  moduleIndex.html  nameIndex.html  objects.inv  undoccedSummary.html  unicodes_api.Groups.html  unicodes_api.LetterMixer.html  unicodes_api.Pairs.html  unicodes_api.PairsGroups.html  unicodes_api.ascii.html  unicodes_api.cli.HackerMixerInteractive.html  unicodes_api.cli.InteractAllGroups.html  unicodes_api.cli.PairsDisplay.html  unicodes_api.cli.all_to_stdout.html  unicodes_api.cli.html  unicodes_api.html  unicodes_api.parser.Formatter.html  unicodes_api.parser.ParserOpts.html  unicodes_api.parser.html  unicodes_api.screen.BidirectionalIterator.html  unicodes_api.screen.BidirectionalNewIterator.html  unicodes_api.screen.BidirectionalStaticRevolvingIterator.html  unicodes_api.screen.BidirectionalStaticStopIterator.html  unicodes_api.screen.NavGroup.html  unicodes_api.screen.NavItem.html  unicodes_api.screen.html
media/demo/: all_box_drawings.sh  all_playing_cards_no_trump.sh  hacker_mixer.sh  show_all_pairs.sh
scripts/: gendoc.py  genmedia.py
src/unicodes_api/: __init__.py  ascii.py  cli.py  parser.py  screen.py
