[metadata]
name = ps1
version = file: VERSION
url = https://github.com/shollingsworth/unicodes
project_urls =
    Changes = https://github.com/shollingsworth/unicodes/blob/main/CHANGELOG.md
    Source Code = https://github.com/shollingsworth/unicodes
    Issue Tracker = https://github.com/shollingsworth/unicodes/issues/
    Twitter = https://twitter.com/_stevo
    Documentation = https://shollingsworth.github.io/unicodes/index.html

license = MIT
author = Steven Hollingsworth
author_email = hollingsworth.stevend@gmail.com
description = Quickly interact with unicode data via the cli, or api
long_description = file: .pypyreadme
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Text Editors :: Documentation
keywords =
    unicode
    cli
    terminal

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
[options.packages.find]
    where = src
